frontend/src/components/home/project/card-components/ProjectNav.module.css
nav {
    --nav-indicator-padding:0.6em;
    color: var(--highlight-colour);
}

#nav-indicator {
    width: 100%;

    flex-shrink: 1;
    margin: 1em;
    border-radius: 7px;
    box-sizing: border-box;
    background-color: var(--secondary-colour);
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    padding: var(--nav-indicator-padding);
    column-gap: 0.6em;
    height: 100%;
}

.project-nav-button {
    height: 0.35em;
    flex-grow: 1;
    background-color: var(--highlight-colour);
    border: none;
    position: relative;
    padding: 0;
    transition: opacity 1s;
    opacity: 1;
}

.project-nav-button[aria-current="false"],
#nav-link-names > *:not([data-current="true"]) {
    opacity: .5;
}

.project-nav-button::before {
    /* Increases size of button's click hitbox */
    content: "";
    position: absolute;
    width: 100%;
    z-index: 1000;
    left: 0;
    top: 50%;
    transform: translateY(-50%);
    height: 100%;
    padding: var(--nav-indicator-padding) 0;
    pointer-events: auto;
    cursor: pointer;
    z-index: -1;
}

#nav-container {
    display: flex;
    align-items: center;
    height: 50vh;
    margin: auto;
}

#nav-link-names {
    flex-grow: 1;
    display: none;
    height: 100%;
}

@media screen and (min-width: 768px) and (max-width: 950px) {
    #nav-container {
        width: 50%;
    }
    
}

@media screen and (min-width: 768px) {
    #nav-indicator {
        flex-direction: column;
        row-gap: 0.6em;
        margin: 1em 0;
        width: var(--nav-indicator-padding);
    }
    .project-nav-button {
        width: 0.35em;
    }
    
    .project-nav-button::before {
        width: 100%;
        height: 100%;
        top:0;
        left: 50%;
        transform: translateX(-50%);
        padding: 0 var(--nav-indicator-padding);
        box-sizing: border-box;
    }
    
    #nav-container {
        flex-basis: fit-content;
    }
}

@media screen and (min-width: 950px) {
    #nav-link-names {
        display: flex;
        flex-direction: column;
    }

    #nav-link-names > * {
        flex-grow: 1;
        display: flex;
        justify-content: center;
        align-items: center;
        text-align: center;
    }

    #nav-link-names > *:hover {
        cursor: pointer;
        filter: brightness(1.15);
    }
    #nav-container {
        flex-basis: 27%;
        flex-shrink: 0.5;
    }
}

